# gh-discord-integration

./: .gitignore  config.toml  main.py  pr_cache.json  pyproject.toml
.do/: deploy.template.yaml
.github/workflows/: pr-health-report.yml
tests/: test_main.py
tests/fixtures/discord/: message_ok.json
tests/fixtures/webhooks/: pull_request_merged.json  pull_request_opened.json  pull_request_review_approved.json  push.json
tests/webhook/: test_redirect.py
webhook/: project.yml
