[project]
name = "pr-health-report"
version = "0.1.0"
description = "Periodic Discord report on open PR health across the randovania org"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pygithub>=2.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.31",
]

[tool.pytest.ini_options]
pythonpath = [".", "webhook/packages/ghapp/redirect"]
testpaths = ["tests"]

